--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
 name: am_i_drank
-description: pet-project to get the drunkness level
+description: fun pet-project to get your drunkness level
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
@@ -15,3 +15,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/icons/app_icon.png
+    - assets/images/bottle.png
