--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   image: ^4.3.0
-  img: ^0.1.0
   flutter_launcher_icons: ^0.14.1
   audioplayers: ^6.1.0
   shared_preferences: ^2.3.3
@@ -26,15 +25,13 @@ dependencies:
   go_router: ^14.6.2
   flame_audio: ^2.10.6
   intl: ^0.20.1
+  google_ml_kit: ^0.19.0
+  blur: ^4.0.0
+  floating_bubbles: ^2.6.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/icons/app_icon.png"
 
 flutter:
   uses-material-design: true
