--- a/frontend/android/settings.gradle
+++ b/frontend/android/settings.gradle
@@ -8,16 +8,35 @@ pluginManagement {
     }
     settings.ext.flutterSdkPath = flutterSdkPath()
 
-    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven {
+            url "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/maven"
+        }
+    }
 
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
-        id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-        id "com.android.application" version "7.3.0" apply false
+        id "com.android.application" version "8.1.0" apply false
         id "org.jetbrains.kotlin.android" version "1.8.21" apply false
     }
 }
 
+dependencyResolutionManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "${settings.ext.flutterSdkPath}/bin/cache/artifacts/engine/android-arm"
+            url "${settings.ext.flutterSdkPath}/bin/cache/artifacts/engine/android-arm64"
+            url "${settings.ext.flutterSdkPath}/bin/cache/artifacts/engine/android-x64"
+        }
+    }
+}
+
 include ":app"
+rootProject.name = 'android'
 
 apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
